--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "antd": "^5.21.2",
     "next": "14.2.13",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18"
   },
   "devDependencies": {
