--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "antd": "^5.21.2",
+    "axios": "^1.7.7",
     "next": "14.2.13",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
