--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.21.2",
     "axios": "^1.7.7",
     "next": "14.2.13",
+    "node-bigcommerce": "^4.1.0",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
